chore(idea): New checks for IDEA